# wasm-lua

./: .gitignore  CMakeLists.txt  README  README.md  app.cpp  app.h  helloworld.js  helloworld.wasm  runlua.cpp
build.emscripten/: index.html
lib/lua-5.4.3/: CMakeLists.txt
scripts/: hello.lua
